--- a/src/components/page-components/Hero/index.css
+++ b/src/components/page-components/Hero/index.css
@@ -4,6 +4,8 @@
     background-color: #222 !important;
     height: 100vh;
     width: 100%;
+    margin: 0px;
+    padding: 0px;
 }
 
 #hero:before {
