--- a/src/components/page-components/About/index.css
+++ b/src/components/page-components/About/index.css
@@ -16,6 +16,10 @@
     width: 70%;
 }
 
+#about .wrapper .summary .overview {
+    animation-name: fadeInUp;
+}
+
 #about .wrapper .biodata {
     margin-right: 1rem;
     padding-right: 1rem;
