--- a/src/components/page-components/Hero/index.css
+++ b/src/components/page-components/Hero/index.css
@@ -19,7 +19,7 @@
 #hero .details {
     color: #fff;
     position: absolute;
-    top: 50%;
+    top: 40%;
     text-align: center;
     width: 100%;
 }
@@ -39,4 +39,13 @@
 
 #hero .job-title .title span {
     color: greenyellow;
+}
+
+#hero .social {
+    margin-top: 3rem;
+}
+
+#hero .social a {
+    color: #fff;
+    font-size: 2rem;
 }
