--- a/src/components/page-components/About/index.css
+++ b/src/components/page-components/About/index.css
@@ -8,10 +8,6 @@
     display: flex;
 }
 
-#about .wrapper .biodata {
-    width: 30%;
-}
-
 #about .wrapper .summary {
     width: 70%;
 }
@@ -21,27 +17,28 @@
 }
 
 #about .wrapper .biodata {
+    width: 30%;
     margin-right: 1rem;
     padding-right: 1rem;
     border-right: 1px solid lightgray;
 }
 
-#about ul {
+#about .biodata ul {
     padding: 0;
     list-style: none;
 }
 
-#about li {
+#about .biodata li {
     padding: .65em 0;
     display: flex;
 }
 
-#about li .label {
+#about .biodata li .label {
     font-weight: bold;
     width: 30%;
 }
 
-#about li .value {
+#about .biodata li .value {
     width: 70%;
 }
 
@@ -51,12 +48,16 @@
 
 #about .key-skills ul{
     display: inline-block;
+    list-style: none;
+    padding: 0;
     width: 100%;
 }
 
 #about .key-skills ul li {
     float: left;
     width: 50%;
+    padding: .65em 0;
+    display: flex;
 }
 
 #about .key-skills li:before {
@@ -64,4 +65,48 @@
     font-family: fontawesome;
     color: #008577;
     margin-right: 10px;
+}
+
+@media(max-width:1999px) {
+    #about .biodata li {
+        flex-direction: column;
+    }
+}
+
+@media(max-width:767px) {
+    #about > .wrapper {
+        display: grid;
+    }
+
+    #about .wrapper .biodata {
+        width: 100%;
+        border-right: none;
+        padding-right: 0px;
+        margin-right: 0px;
+    }
+
+    #about .wrapper .biodata .photo-wrapper {
+        position: relative;
+        text-align: center;
+    }
+
+    #about .wrapper .summary {
+        width: 100%;
+    }
+
+    #about .biodata li {
+        flex-direction: row;
+    }
+
+    #about .key-skills ul {
+        list-style: none;
+        padding-left: 0px;
+        display: grid;
+    }
+
+    #about .key-skills ul li {
+        display: initial;
+        width: 100%;
+        padding-bottom: .625rem;
+    }
 }
