--- a/src/components/page-components/Achievements/index.css
+++ b/src/components/page-components/Achievements/index.css
@@ -50,3 +50,34 @@
 #achievements .wrapper p {
     font-size: 1.25rem;
 }
+
+@media(max-width:767px) {
+    #achievements .wrapper {
+        top: 0;
+        padding: .5rem 0;
+    }
+
+    #achievements .wrapper .items {
+        display: block;
+    }
+
+    #achievements .wrapper .items .list-item {
+        margin-bottom: 3rem;
+    }
+
+    #achievements .wrapper .items .list-item:last-child {
+        margin-bottom: 0;
+    }
+
+    #achievements .wrapper i{
+        font-size: 4rem;
+    }
+
+    #achievements .wrapper h3 {
+        font-size: 2.7rem;
+    }
+
+    #achievements .wrapper p {
+        margin-block: 0px;
+    }
+}
