--- a/src/components/page-components/Achievements/index.css
+++ b/src/components/page-components/Achievements/index.css
@@ -70,14 +70,18 @@
     }
 
     #achievements .wrapper i{
-        font-size: 4rem;
+        font-size: 3rem;
     }
 
     #achievements .wrapper h3 {
-        font-size: 2.7rem;
+        font-size: 2rem;
     }
 
     #achievements .wrapper p {
         margin-block: 0px;
+    }
+
+    #achievements .section-title {
+        margin: 2rem;
     }
 }
