--- a/src/components/page-components/Hero/index.css
+++ b/src/components/page-components/Hero/index.css
@@ -19,7 +19,7 @@
     background-color: rgba(26, 30, 35, 0.85);
     position: absolute;
     width: 100%;
-    height: 100%;
+    height: 100vh;
 }
 
 #hero .details {
