Mobile background image fixes

--- a/src/components/page-components/Hero/index.css
+++ b/src/components/page-components/Hero/index.css
@@ -10,7 +10,7 @@
 
 @media(max-width:1199px) {
     #hero {
-        background-attachment: scroll;
+        background-attachment: scroll !important;
     }
 }
 
