--- a/src/components/global/Header/index.css
+++ b/src/components/global/Header/index.css
@@ -1,26 +1,52 @@
-header {
-    position: sticky;
+.nav-bar {
+    cursor: pointer;
+    padding: .8rem;
+    width: fit-content;
+    position: fixed;
+    background-color: rgba(26, 30, 35, 0.85);
+    border-radius: 5px;
+    margin: 10px;
     top: 0;
-    background-color: #fff;
-    z-index: 999;
-    padding: 1rem;
+    right: 0;
+    color: #fff;
+    z-index: 9999;
 }
 
 header .global-nav {
-    width: 90%;
-    margin: auto;
+    display: none;
+    position: fixed;
+    top: 0;
+    right: 0;
+    background-color: rgba(26, 30, 35, 0.85);
+    color: #fff;
+    z-index: 999;
+    height: 100vh;
+}
+
+header .global-nav.is-open {
+    display: block;
+}
+
+header .global-nav h3 {
+    padding-left: 1rem;
+    padding-right: 5rem;
 }
 
 header .global-nav-menu ul {
     list-style: none;
     display: flex;
+    flex-direction: column;
     margin-block: 0;
     padding-inline: 0;
     justify-content: end;
 }
 
+header .global-nav-menu ul li {
+    padding: 1em 0;
+}
+
 header .global-nav-menu a {
-    color: black;
+    color: #fff;
     font-weight: bold;
     font-size: .925rem;
     font-family: sans-serif;
@@ -31,49 +57,4 @@ header .global-nav-menu a {
 
 header .global-nav-menu a:hover, header .global-nav-menu a.active {
     color: #008577;
-}
-
-header .global-nav {
-    display: flex;
-    justify-content: space-between;
-}
-
-header .title {
-    margin-block: 0;
-}
-
-header .nav-bar {
-    display: none;
-}
-
-@media(max-width:1199px) {
-    header {
-        display: flex;
-    }
-
-    header .nav-bar {
-        display: block;
-    }
-
-    header .global-nav .global-nav-menu {
-        display: none;
-    }
-
-    header .global-nav.is-open .global-nav-menu {
-        display: block;
-        position: absolute;
-        left: 0;
-        background: #fff;
-        top: 3.35rem;
-        height: 100vh;
-        width: 100vw;
-    }
-
-    header .global-nav.is-open .global-nav-menu ul {
-        flex-direction: column;
-    }
-
-    header .global-nav.is-open .global-nav-menu ul li {
-        padding: 1rem;
-    }
 }
